WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23414
Reproducible crash accessing View menu with plugins disabled
https://bugs.webkit.org/show_bug.cgi?id=23414
Summary
Reproducible crash accessing View menu with plugins disabled
Thomas Sutton
Reported
2009-01-18 17:36:20 PST
I've encountered a reproducible crash in WebKit 40000. 1) Disable plugins in the preferences. 2) Do one of the following: 2a) click the view menu; 2b) use the view source key command; or 2c) perhaps anything else involving that menu 3) Crash in WebCore::PluginData::supportsMimeType. I'll attach the crash report.
Attachments
Crash report for r40000 when View menu activated with plug-ins disabled
(20.40 KB, text/plain)
2009-01-18 17:37 PST
,
Thomas Sutton
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Thomas Sutton
Comment 1
2009-01-18 17:37:38 PST
Created
attachment 26837
[details]
Crash report for
r40000
when View menu activated with plug-ins disabled
Thomas Sutton
Comment 2
2009-01-18 17:38:40 PST
This is happening on multiple machines running 10.4.11 on PPC hardware.
Thomas Sutton
Comment 3
2009-01-18 17:43:55 PST
2c) Anything else involving that menu including, e.g., right clicking.
Mark Rowe (bdash)
Comment 4
2009-01-18 17:44:52 PST
Confirmed with
r40022
on 10.4.11.
Mark Rowe (bdash)
Comment 5
2009-01-18 17:50:12 PST
Also happens on 10.5 with Safari 3.2.1.
Mark Rowe (bdash)
Comment 6
2009-01-18 17:52:44 PST
This should be trivial to fix. I'll take a stab at it as soon as my debug build of WebKit finishes compiling.
Mark Rowe (bdash)
Comment 7
2009-01-18 18:31:45 PST
Fixed in
r40023
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug