Fix <https://bugs.webkit.org/show_bug.cgi?id=23414>. Bug 23414: Reproducible crash accessing View menu with plugins disabled

Reviewed by Anders Carlsson.

* WebView/WebFrame.mm:
(-[WebFrame _canProvideDocumentSource]): Null-check the PluginData before using it.

Canonical link: https://commits.webkit.org/32219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40023 268f45cc-cd09-0410-ab3c-d52691b4dbfc